[package]
name = "user"
authors = ["Zepeng Zhang <peterwrighten@gmail.com>"]
version = "0.1.0"
edition = "2021"
default-run = "user_shell"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]




[[bin]]
name = "pipetest"

[[bin]]
name = "user_shell"

[[bin]]
name = "cat"

[[bin]]
name = "sig_simple"